--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -6,11 +6,48 @@
     /* color: #2c3e50;
     margin-top: 60px; */
 }
-/* .container {
-    /* max-width: 500px; */
+.container {
+  width: 600px!important;
+}
 
-@media (min-width: 992px) {
+/* @media (min-width: 992px) {
     .container{
         width: 720px!important;
     }
+} */
+
+.logo-accueil{
+    max-width : 500px;
+    max-height: auto;
+    display: block;
 }
+
+/* css input connexion */
+label {
+    position: relative;
+  }
+  
+  label input {
+    padding: 0.5rem 1rem;
+    border-radius: 5px;
+    /* transition: all 0.2s; */
+    width: 100%;
+  }
+  label .password-icon {
+    display: flex;
+    align-items: center;
+    position: absolute;
+    top: 50%;
+    right: 20px;
+    transform: translateY(-50%);
+    width: 20px;
+    /* transition: all 0.2s; */
+  }
+  label .password-icon:hover {
+    cursor: pointer;
+    /* color: grey; */
+  }
+  
+  label .password-icon .eye-slash-fill {
+    display: none;
+  }
