--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -3,35 +3,32 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   color: #162847;
-
 }
 
 .container {
   max-width: 600px !important;
-  /* background-color: #d0555d; */
+  height: auto;
 }
+
 .logo-accueil {
   max-width: 500px;
   max-height: auto;
   display: block;
 }
 
-/* css input connexion */
-
+/* css input  */
 label {
   display: flex;
   justify-content: center;
   position: relative;
   padding: 0.5rem 1rem;
   border-radius: 5px;
-  /* transition: all 0.2s; */
   width: 100%;
 }
 
 label input {
   padding: 0.5rem 1rem;
   border-radius: 5px;
-  /* transition: all 0.2s; */
   width: 100%;
 }
 
@@ -43,20 +40,20 @@ label .password-icon {
   right: 20px;
   transform: translateY(-50%);
   width: 20px;
-  /* transition: all 0.2s; */
 }
 
 label .password-icon:hover {
   cursor: pointer;
-  /* color: grey; */
 }
 
 label .password-icon .eye-slash-fill {
   display: none;
 }
+
 label .password-icon .eye-fill {
   display: block;
 }
+
 .profilePicU {
   display: inline-block;
   width: 50px;
@@ -65,38 +62,43 @@ label .password-icon .eye-fill {
   border: 1px solid grey;
   object-fit: cover;
 }
+
 #profileId {
   width: 100%;
 }
+
 #profilePic {
   display: inline-block;
   width: 200px;
   height: 200px;
-  /* border-radius: 50%; */
   border: 1px solid grey;
   object-fit: cover;
 }
 
-.logo{
+.logo {
   width: auto;
-  height: 30px!important; 
+  height: 30px !important;
 }
+
 a {
   cursor: pointer;
- }
- .menu {
+}
+
+.menu {
   display: inline-block;
   border: solid 1px;
   border-radius: 5px;
   padding: 5px;
-  color: white!important;
-  text-decoration: none!important;
-  background-color: #162847!important;
+  color: white !important;
+  text-decoration: none !important;
+  background-color: #162847 !important;
 }
+
 .btn {
-  background-color: #d0555d!important;
-  color: white!important;
+  background-color: #d0555d !important;
+  color: white !important;
 }
+
 .bg-blue {
-  background-color: #162847!important;
+  background-color: #162847 !important;
 }
